--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -61,7 +61,9 @@
           <ul class="dropdown-menu" role="menu">
             <li><a href="#">#Soldiers</a></li>
             <li class="divider"></li>
-            <li><a href="#">#Trucks</a></li>
+            <li><a href="#">#Trucks</a></li>            
+            <li class="divider"></li>
+            <li><a href="#">#Trailers</a></li>
           </ul>
         </li>
       </ul>
