refactored seed and added some validations

--- a/app/views/dispatch/forecast.erb
+++ b/app/views/dispatch/forecast.erb
@@ -37,7 +37,7 @@
 					<% @unresolved_missions[:uninitiated].each do |mission| %>
 						<form action=<%="/missions/leave_wire/#{mission.id}"%> method='post'>
 						<input type="hidden" name="_method" value="put"/>
-						<% if mission.step_off < Time.now %>
+						<% if mission.step_off_at < Time.now %>
 							<div class='panel-body'>
 								<p class="text-danger">
 									<a href=<%="/missions/#{mission.id}"%>>
