--- a/app/views/partials/_add_passenger.erb
+++ b/app/views/partials/_add_passenger.erb
@@ -1,5 +1,5 @@
 <div class="panel-body">
 	<div class="form-group">
-		<input type="text" name="passengers[][name]" placeholder="assigned soldier">
+		<input type="text" name="assignments[][name]" placeholder="assigned soldier">
 	</div>
 </div>
