--- a/app/views/partials/_add_truck.erb
+++ b/app/views/partials/_add_truck.erb
@@ -1,8 +1,8 @@
 <div class="panel-body">
   <div class="form-group">
     <input type="text" name="trucks[][truck_name]" placeholder="truck">
-    <input type="text" name="trucks[][driver_name]" placeholder="driver's name">
-    <input type="text" name="trucks[][a_driver_name]" placeholder="A-driver's name">
+    <input type="text" name="assignments[][driver_name]" placeholder="driver's name">
+    <input type="text" name="assignments[][a_driver_name]" placeholder="A-driver's name">
   </div>
 </div>
 
