partial refactor, still in pieces

--- a/app/views/partials/_add_passenger.erb
+++ b/app/views/partials/_add_passenger.erb
@@ -1,5 +1,6 @@
 <div class="panel-body">
 	<div class="form-group">
-		<input type="text" name="assignments[][name]" placeholder="assigned soldier">
+		<input type="text" name="passengers[][passenger_name]" placeholder="passenger">
+		<input type="text" name="passengers[][truck_name]" placeholder="truck riding in">
 	</div>
 </div>
