reworked 'avaliable resources' to accept display options for all/avaliable resources ~ish

--- a/app/views/dispatch/mission_display.erb
+++ b/app/views/dispatch/mission_display.erb
@@ -23,8 +23,9 @@
       <div class='panel panel-default'>
         <% @mission_display[:trucks].each do |truck| %>
           <div class='panel-body'>
-            <form action=<%="/missions/safe_return/#{@mission_display[:mission].id}/Dispatch/#{truck[:dispatch_id]}"%> method='post'>
-            <input type='hidden' name='_method' value='put'>
+            <form action=<%="/missions/safe_return/#{@mission_display[:mission].id}/Dispatch/#{truck[:dispatch_id]}"%> method='get'>
+            <!-- <form action=<%#="/missions/safe_return/#{@mission_display[:mission].id}/Dispatch/#{truck[:dispatch_id]}"%> method='post'> -->
+            <!-- <input type='hidden' name='_method' value='put'> -->
               <p class=<%= stoplight_class( truck[:safe_return] ) %>>
                 <%= "#{truck[:truck].name} - #{truck[:driver].name} #{truck[:driver].rank}, #{truck[:a_driver].name} #{truck[:a_driver].rank}  " %>
                 <button type='submit' class='btn btn-default' style=<%=display_toggle(truck[:safe_return])%>> Check In</button>
