--- a/app/views/partials/_resource_list.erb
+++ b/app/views/partials/_resource_list.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <h3>Currently Avaliable Resources</h3>
+    <h3><%="#{display_option.capitalize}"%> Resources</h3>
   </div>
 </div>
 
