--- a/app/views/planning/new_mission.erb
+++ b/app/views/planning/new_mission.erb
@@ -5,7 +5,14 @@
 			<%= erb :'/partials/_new_assignment' %>
 		</div>
 		<div class='col-md-6'>
-			<%= erb :'/partials/_resource_list', {layout: false, locals: { trucks: @trucks, personnel: @personnel, trailers: @trailers}} %>
+			<% case @display_option
+				 when "avaliable" %>
+					<%= erb :'/partials/_resource_list', {layout: false, locals: { display_option: @display_option, trucks: @planning_resources[:avaliable][:truck], personnel: @planning_resources[:avaliable][:soldier], trailers: @planning_resources[:avaliable][:trailer]}} %>
+				<%when "all" %>
+					<%= erb :'/partials/_resource_list', {layout: false, locals: { display_option: @display_option, trucks: @planning_resources[:full_list][:truck], personnel: @planning_resources[:full_list][:soldier], trailers: @planning_resources[:full_list][:trailer]}} %>
+				<%else%>
+					<%= erb :'/partials/_resource_list', {layout: false, locals: { display_option: @display_option, trucks: @planning_resources[:avaliable][:truck], personnel: @planning_resources[:avaliable][:soldier], trailers: @planning_resources[:avaliable][:trailer]}} %>
+				<%end%>
 		</div>
 	</div>
 		
