tweaked db design for tk ck in

--- a/app/views/dispatch/check_in_dispatch.erb
+++ b/app/views/dispatch/check_in_dispatch.erb
@@ -1,4 +1,4 @@
-@returning_unit =
+<!-- @returning_unit =
 {truck:         truck,
       driver:       soldier_assignments.find_by(role: "Driver").soldier,
       a_driver:     soldier_assignments.find_by(role: "A-Driver").soldier,
@@ -6,29 +6,40 @@
       trailer:      trailer_assignments.map{|t| t.trailer},
       out_wire: 		self.out_wire,
       safe_return:  self.safe_return,
-      dispatch_id:  self.id}
+      dispatch_id:  self.id} -->
 
 <div clas="container">
 
 	<div class="jumbotron">
-		<h1><%="#{@returning_unit[:truck].name} - #{@returning_unit[:driver].name} #{@returning_unit[:driver].rank}, #{@returning_unit[:a_driver].name} #{@returning_unit[:a_driver].rank}"<%></h1>
+		<h1><%="#{@returning_unit[:truck].name} - #{@returning_unit[:driver].name} #{@returning_unit[:driver].rank}, #{@returning_unit[:a_driver].name} #{@returning_unit[:a_driver].rank}"%></h1>
 	</div>
 
 	<div class='row'>
 		<div class='col-sm-6'>
-			<form action=<%="/missions/safe_return/#{@mission_id}/Dispatch/#{@returning_unit[:dispatch_id]}"%> method='post'>
-		  <input type='hidden' name='_method' value='put'>
-		  	<div class="form-group">
-					<input type="text" name="miles_added" placeholder="miles">
-					<input type="text" name="gallons_added" placeholder="gallons">
-					<input type="text" name="oil_added" placeholder="truck attached to">
-					<input type="checkbox" name="keys" value="confirmed">Keys Returned
-					<br>
-					<input type="checkbox" name="dispatch" value="confirmed">Dispatch Returned
-					<br>
+			<div class='panel panel-default'>
+				<div class='panel-body'>
+					<form action=<%="/missions/safe_return/#{@mission_id}/Dispatch/#{@returning_unit[:dispatch_id]}"%> method='post'>
+				  <input type='hidden' name='_method' value='put'>
+				  	<div class="form-group">
+							<input type="text" name="ending_miles" placeholder="miles">
+				  		Miles
+							<br>
+							<input type="text" name="gallons_added" placeholder="gallons">
+							Gallons
+							<br>
+							<input type="text" name="oil_added" placeholder="quarts of oil">
+							Oil 
+							<br>
+							<!-- these ck boxes are really just UX featurs to prompt user behavior, they aren't intended to be functional -->
+							<input type="checkbox" name="keys" value="confirmed">Keys Returned
+							<br>
+							<input type="checkbox" name="dispatch" value="confirmed">Dispatch Returned
+							<br>
+						</div>
+						<button type='submit' class='btn btn-default' > Check In</button>
+					</form>
 				</div>
-				<button type='submit' class='btn btn-default' > Check In</button>
-			</form>
+			</div>
 		</div>
 	</div>
 	
