--- a/app/views/dispatch/forecast.erb
+++ b/app/views/dispatch/forecast.erb
@@ -14,9 +14,12 @@
 					<% @unresolved_missions[:initiated].each do |mission| %>
 						<div class='panel-body'>
 							<p class="text-success">
-								<a href=<%="/missions/#{mission.id}"%>>
+								<form action=<%="/missions/#{mission.id}"%> method='get'>
 									<%= "#{mission.show_out_datetime} - #{mission.name} #{mission.unit_serviced}" %>
-								</a>
+									<button type="submit" class="btn btn-default">
+										View
+									</button>
+								</form>
 							</p>
 						</div>
 					<%end%>
@@ -35,25 +38,20 @@
 					</div>
 				<% else %>
 					<% @unresolved_missions[:uninitiated].each do |mission| %>
-						<form action=<%="/missions/leave_wire/#{mission.id}"%> method='post'>
-						<input type="hidden" name="_method" value="put"/>
-						<% if mission.step_off_at < Time.now %>
-							<div class='panel-body'>
-								<p class="text-danger">
-									<a href=<%="/missions/#{mission.id}"%>>
-										<%= "#{mission.show_out_datetime} - #{mission.name} #{mission.unit_serviced}" %>
-						<%else%>
-							<div class='panel-body' class='success'>
-								<p class='text-info'>
-									<a href=<%="/missions/#{mission.id}"%>>
-										<%= "#{mission.show_out_datetime} - #{mission.name} #{mission.unit_serviced}" %>
-						<%end%>
-									</a>
+						<div class='panel-body' class=<%=stoplight_class(mission.step_off_at < Time.now)%>>
+							<form action=<%="/missions/leave_wire/#{mission.id}"%> method='post'>
+							<input type="hidden" name="_method" value="put"/>
+									<%= "#{mission.show_out_datetime} - #{mission.name} #{mission.unit_serviced}" %>
 								<button type="submit" class="btn btn-default">
 									Leaving
-								</button></p>
-							</div>
-						</form>
+								</button>
+							</form>
+							<form action=<%="/missions/#{mission.id}"%> method='get'>
+								<button type="submit" class="btn btn-default">
+									View
+								</button>
+							</form>
+						</div>
 					<%end%>
 				<%end%>
 			</div>
