individual soldier display mostly working

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -59,7 +59,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Resource Management <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">#Soldiers</a></li>
+            <li><a href="/soldiers">Soldiers</a></li>
             <li class="divider"></li>
             <li><a href="#">#Trucks</a></li>            
             <li class="divider"></li>
