--- a/app/views/resources/soldier_display.erb
+++ b/app/views/resources/soldier_display.erb
@@ -32,11 +32,12 @@ display needs to be passed
           <h4>Soldier's Missions</h4>
         </div>
         <%@soldier_display[:missions].each do |mission| %>
-          <form action=<%="url to the individual mission"%>>
-            <%="#{mission[:name]}-#{mission[:unit]}-#{mission[:show_out_datetime]}:  #{mission[:truck_name]} #{mission[:driver_namerank]}, #{mission[:a_driver_namerank]}"%> 
+          <form action=<%="/missions/#{mission[:id]}"%>>
             <button type="submit" class="btn btn-default">
-              View
+              <%= "#{mission[:name]} #{mission[:unit]}"%>
             </button>
+            <%=" - #{mission[:show_out_datetime]} -  #{mission[:truck_name]}  #{mission[:driver_namerank]} #{mission[:a_driver_namerank]}"%> 
+
           </form>
         <%end%>
       </div>
