--- a/app/views/dispatch/mission_display.erb
+++ b/app/views/dispatch/mission_display.erb
@@ -32,7 +32,7 @@
             -->
 
               <p class=<%= stoplight_class( truck[:safe_return] ) %>>
-                <%= "#{truck[:truck].name} - #{truck[:driver].name} #{truck[:driver].rank}, #{truck[:a_driver].name} #{truck[:a_driver].rank}  " %>
+                <%= "#{truck[:truck].name_model} - #{truck[:driver].namerank}, #{truck[:a_driver].namerank}  " %>
                 <button type='submit' class='btn btn-default' style=<%=display_toggle(truck[:safe_return])%>>
 <!-- the display toggle isn't working here...
 the *style="visibility:none"* is showing up on the page, so...?  -->
@@ -40,7 +40,7 @@ the *style="visibility:none"* is showing up on the page, so...?  -->
               </p>
               <p class=<%= stoplight_class( truck[:safe_return] ) %>>
                 <% truck[:passengers].each do |passenger| %>
-                    <%= "#{passenger.name} #{passenger.rank} "%>
+                    <%= "#{passenger.namerank} "%>
                 <%end%>
               </p>
               <p class=<%= stoplight_class( truck[:safe_return] ) %>>
