--- a/app/views/resources/soldier_display.erb
+++ b/app/views/resources/soldier_display.erb
@@ -18,8 +18,8 @@ display needs to be passed
  -->
 <div class="container">
 
-  <div class='jumbotron'>
-    <h1><%="#{@soldier_display[:soldier].name} #{@soldier_display[:soldier].rank}"%><span class='text-success' style=<%=display_toggle(@soldier_display[:on_mission])%>> - On Mission</span></h1>
+  <div class='jumbotron' >
+    <h1 ><%="#{@soldier_display[:soldier].name} #{@soldier_display[:soldier].rank}"%><span class='text-success' style=<%#=display_toggle(@soldier_display[:on_mission])%> > - On Mission</span></h1>
     <br>
     <h3><%="ph: #{@soldier_display[:soldier].phone_number} wep: #{@soldier_display[:soldier].weapon_number} AT Missions: #{@soldier_display[:missions].count} AT Miles: #{@soldier_display[:soldier].miles}"%></h3>
   </div>
@@ -32,8 +32,8 @@ display needs to be passed
           <h4>Soldier's Missions</h4>
         </div>
         <%@soldier_display[:missions].each do |mission| %>
-          <form action=<%="/missions/#{mission[:id]}"%>>
-            <button type="submit" class="btn btn-default">
+          <form action=<%="/missions/show/#{mission[:id]}"%>>
+            <button type="submit" class="btn btn-default" >
               <%= "#{mission[:name]} #{mission[:unit]}"%>
             </button>
             <%=" - #{mission[:show_out_datetime]} -  #{mission[:truck_name]}  #{mission[:driver_namerank]} #{mission[:a_driver_namerank]}"%> 
