truck resource display mostly done

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -61,7 +61,7 @@
           <ul class="dropdown-menu" role="menu">
             <li><a href="/soldiers">Soldiers</a></li>
             <li class="divider"></li>
-            <li><a href="#">#Trucks</a></li>            
+            <li><a href="/trucks">Trucks</a></li>            
             <li class="divider"></li>
             <li><a href="#">#Trailers</a></li>
           </ul>
