partial complete on rest points

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,7 +23,8 @@
 
   <!-- for the google map API -->
   <script src="https://maps.googleapis.com/maps/api/js"></script>
-
+  <!-- needed for the 'add marker' on map API --> 
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=drawing"></script>
 
 
 
