--- a/app/views/partials/_route_planning.erb
+++ b/app/views/partials/_route_planning.erb
@@ -14,23 +14,43 @@
     // turns out this isn't supported by basic sinatra, although it is built in functionality in rails
     function initialize() {
       var mapCanvas = document.getElementById('map-canvas');
+
       var grid = new google.maps.LatLng(41.5403, -88.0463);
+      var other_grid = new google.maps.LatLng(41.0000, -88.0000);
+
       var mapOptions = {
         center: grid,
         zoom: 8,
         mapTypeId: google.maps.MapTypeId.ROADMAP
       };
+
       var map = new google.maps.Map(mapCanvas, mapOptions);
       
+      var marker = new google.maps.Marker({
+        position: grid,
+        map: map,
+        title: "stuff"
+      });
 
-    }
+      var other_marker = new google.maps.Marker({
+        position: other_grid,
+        map: map
+      });
+
+      var drawingManager = new google.maps.drawing.DrawingManager({
+        drawingMode:  google.maps.drawing.OverlayType.MARKER,
+        drawingControl: true,
+        drawingControlOptions: {
+          position: google.maps.ControlPosition.TOP_CENTER,
+          drawingModes:[google.maps.drawing.OverlayType.MARKER]}
+      });
+
+      drawingManager.setMap(map)
+
+    };
     google.maps.event.addDomListener(window, 'load', initialize);
   </script>
 
-// <script>
-//       var marker = new google.maps.Marker({
-//         position: grid,
-//         map: map,
-//         title: "stuff"
-//       });
-// </script>
+<script>
+      
+</script>
